# adl-recognition-via-text

./: .gitignore  LICENSE  README.md  exploration.py  main.py  pyproject.toml
codebase/: domain.py  experiment.py  loading.py  lstm.py  mailing.py  plotting.py  preprocessing.py  reporting.py  textualization.py  vectorization.py  windowing.py
config/: data.toml  experiment.toml
imported/: tidy_results.csv  tidy_results_ablation.csv
scripts/: paper_assets.ipynb  xp_runner_usage_demo.ipynb
testbed/casas-aruba/: activities.csv  meta.toml
testbed/casas-milan/: activities.csv  meta.toml
testbed/ordonez-a/: activities.csv  meta.toml  sensors.csv
testbed/ordonez-b/: activities.csv  meta.toml  sensors.csv
