[project]
name = "textual-flowar"
version = "0.1.0"
description = "Cross-domain Human Activity Recognition (HAR) using text."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim",
    "google-auth",
    "gspread",
    "ipykernel",
    "ipywidgets",
    "lightning",
    "matplotlib",
    "num2words",
    "pingouin>=0.5.5",
    "python-dotenv",
    "scikit-learn",
    "seaborn",
    "sentence-transformers",
    "statsmodels",
    "streamlit",
    "tensorboardx",
    "toml",
    "torch<2.7",
    "umap-learn",
]
